Bug fixing for PRIDE XML